# cpp-ray-tracing

./: CMakeLists.txt  README.md  Raytracer Documentation.docx  main.cpp
images/: test.ppm
src/: PPM.cpp  PPM.h  camera.h  color.h  consts.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  vec3.h
